tests/baselines/reference/staticClassMemberError.errors.txt
==== tests/cases/compiler/staticClassMemberError.ts (3 errors) ====
    class C {
        static s;
        public a() {
            s = 1;
      ~
!!! error TS2095: Could not find symbol 's'.
        }
    }
    
    // just want to make sure this one doesn't crash the compiler
    function Foo();
    class Foo {
    ~~~~~
!!! error TS1041: Function implementation expected.
          ~~~
!!! error TS2000: Duplicate identifier 'Foo'.
     static bar;
    }